# PMG

./: .gitignore  .graphifyignore  README.md  SESSION.md  how-to-run-experiments.md  plan.md  pyproject.toml  report.md  tasks.py  timeline_a_context.md
PMG/: .SE_block().md  .SE_block()_1.md  .SE_block()_2.md  .SE_block()_3.md  .SE_block()_4.md  .SE_block()_5.md  .__init__().md  .dilated_block().md  .dilated_block()_1.md  .dilated_block()_2.md  .dilated_block()_3.md  .dilated_block()_4.md  .dilated_block()_5.md  .forward().md  .model().md  .model()_1.md  .model()_2.md  .model()_3.md  .model()_4.md  .model()_5.md  5-Fold Cross-Validation for Reproducibility.md  5-Fold Double Cross-Validation Strategy.md  602020 TrainValTest Split.md  AUCROC Metric for Model Selection (Not F2 Due to Distribution Differences).md  Ablation Study CLI (black-box occlusion test).md  Ablation Study Each Preprocessing Step Contribution.md  Ablation Study Framework (AblationStudy class).md  Alternative Normalization Methods (Z-score, Nyul).md  Anomaly Detection Framing for PMG (Normal=HC, Anomaly=PMG).md  Apply a random square black-box occlusion to every image in data_loader..md  Apply full preprocessing pipeline with configurable parameters.      Args.md  Artikel 1 A Novel Center-Based Deep Contrastive Metric Learning Method for PMG Detection.md  Artikel 2 Automated Detection of Polymicrogyria in Pediatric Patients Using Deep Learning (Guha & Bhandage, 2025).md  Artikel 3 Code Repository (cDCM implementation).md  Artikel 3 Deep Contrastive Metric Learning to Detect Polymicrogyria in Pediatric Brain MRI (Lingfeng Zhang Thesis, 2022).md  BCE_learning_classification.py.md  Bilateral Filter for Noise Reduction (Edge-Preserving).md  BilateralFilterConfig.md  Build the correct architecture from a checkpoint filename.      Args         cf.md  CLAHE (Contrast Limited Adaptive Histogram Equalization).md  (+505 more)
agents/: code-critic.md  code-writer.md  documentation-writer.md  executor.md  planner.md  researcher.md  synthesizer.md
data/: nii_test_labels.csv
graphify-out/: .graphify_python  cost.json  (+4 more)
(+107 files in other folders)
